--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# fasano.franceschini.test
+# Fasano Franceschini Test
 
 <!-- badges: start -->
 <!-- badges: end -->
