journal article revisions and updated bib

--- a/journalMS/refs.bib
+++ b/journalMS/refs.bib
@@ -75,4 +75,33 @@ edition = {3}
     url = {https://CRAN.R-project.org/package=Peacock.test},
   }
 
+@techreport{Stephens1992,
+author = {Stephens, M. A.},
+institution = {Stanford University, Department of Statistics},
+pages = {19},
+publisher = {Defense Technical Information Center},
+title = {{An appreciation of Kolmogorov's 1933 paper}},
+url = {https://statistics.stanford.edu/research/appreciation-kolmogorovs-1933-paper},
+year = {1992}
+}
+
+@article{Smirnov1948,
+author = {Smirnov, N.},
+doi = {10.1214/aoms/1177730256},
+issn = {0003-4851},
+journal = {The Annals of Mathematical Statistics},
+title = {{Table for Estimating the Goodness of Fit of Empirical Distributions}},
+year = {1948}
+}
+
+@article{Kolmogorov1933,
+author = {Kolmogorov, A. N.},
+journal = {Giornale dell'Istituto Italiano degli Attuari},
+number = {4},
+pages = {83--91},
+title = {{Sulla Determinazione Empirica di Una Legge di Distribuzione}},
+year = {1933}
+}
+
+
 
