--- a/journalMS/refs.bib
+++ b/journalMS/refs.bib
@@ -103,5 +103,55 @@ title = {{Sulla Determinazione Empirica di Una Legge di Distribuzione}},
 year = {1933}
 }
 
+@article{Kolmogorov1933a,
+author = {Kolmogorov, A. N.},
+journal = {Bulletin (Izvestija) Academie des Sciences URSS},
+pages = {363--372},
+title = {{Uber die Grenzwertsatze der Wahrscheinlichkeitsrechnung}},
+year = {1933}
+}
+
+
+@article{Smirnov1939,
+author = {Smirnov, N. V.},
+journal = {Recueil Mathematique (Matematiceskii Sbornik)},
+number = {48},
+pages = {3--26},
+title = {{Ob uklonenijah empiricheskoi krivoi raspredelenija}},
+volume = {6},
+year = {1939}
+}
+
+@article{Smirnov1936,
+author = {Smirnov, N.V.},
+journal = {Com. Rend. Acad. Sci. (Paris)},
+pages = {449--452},
+title = {{Sur la distribution de w2 (criterium de M.R. v. Mises)}},
+volume = {202},
+year = {1936}
+}
+
+@article{Smirnov1937,
+author = {Smirnov, N.V.},
+journal = {Russian Recueil Math},
+pages = {973--993},
+title = {{Sur la distribution de w2 (criterium de M.R. v. Mises)}},
+volume = {2},
+year = {1937}
+}
+
+@article{Smirnov1944,
+author = {Smirnov, N.V.},
+journal = {Uspehi Mat. Nauk},
+pages = {179--206},
+title = {{Approximate laws of distribution of random variables from empirical data}},
+volume = {10},
+year = {1944}
+}
+
+
+
+
+
 
 
