--- a/journalMS/refs.bib
+++ b/journalMS/refs.bib
@@ -149,6 +149,17 @@ volume = {10},
 year = {1944}
 }
 
+@incollection{Stephens1992a,
+author = {Stephens, M. A.},
+doi = {10.1007/978-1-4612-4380-9_9},
+pages = {93--105},
+publisher = {Springer, New York, NY},
+title = {{Introduction to Kolmogorov (1933) On the Empirical Determination of a Distribution}},
+url = {https://link.springer.com/chapter/10.1007/978-1-4612-4380-9{\_}9},
+year = {1992}
+}
+
+
 
 
 
