updated references to 2-D KS equations

--- a/journalMS/refs.bib
+++ b/journalMS/refs.bib
@@ -159,6 +159,14 @@ url = {https://link.springer.com/chapter/10.1007/978-1-4612-4380-9{\_}9},
 year = {1992}
 }
 
+@book{Kendall1946,
+address = {London},
+author = {Kendall, M. G. and Stuart, A.},
+publisher = {Griffin},
+title = {{The Advanced Theory of Statistics}},
+volume = {2},
+year = {1946}
+}
 
 
 
