--- a/journalMS/article.tex
+++ b/journalMS/article.tex
@@ -184,7 +184,7 @@ The Kolmogorov-Smimov statistic (D) is the defined by the maximum difference bet
 from school.}
 \end{figure}
 
-Kolmogorov and Smimov work defined the cumulative distribution for a random D-stat as:
+Kolmogorov and Smimov work defined the cumulative distribution for a random D-stat, which was later refined by Kendall and Stuart~\citep{Kendall1946}:
 
 \begin{equation} \label{eq:1}
 \Phi(\lambda) = 2 \sum_{k=1}^{\infty} -1^{k-1}e^{-2k^2\lambda^2}
@@ -209,7 +209,10 @@ where $n1$ and $n2$ is the number of data points in the first and second samples
 
 \subsection{Higher Dimensional KS Test}
 
-Similar to the 1-D KS test, the obvious solution to extend the theory into higher dimensional would be to define the maximal cumulative difference between the two 2-D distributions. This however, presents an issue as the commutative distribution function is not well defined in more than one dimension\citep{Peacock1983}.
+Similar to the 1-D KS test, the obvious solution to extend the theory into higher dimensional would be to define the maximal cumulative difference between the two 2-D distributions. This however, presents an issue as the commutative distribution function is not well defined in more than one dimension. In N dimensional space there are $2^{N}-1$ independant ways of defining the cumlative distribution function\citep{Peacock1983}.
+
+ADD FIGURE for showing the 4 ways (3 independent ways) of defining the cummaltive distribution in 2-D.
+$P(x < X, y < Y) = 1 - P(x > X, y > Y); P(x < X, y > Y); P(x > X, y < Y)$
 
 \subsection{Peacock Test (1983) and Fasano Franceschini Test (1987)}
 The Peacock test was the original generalization of the 1-D KS test to higher dimensions. Peacock solved the higher dimensionality issue by using the total intergrated probability -- i.e. fraction of data -- in each of the four quadrants around all possible points in the data. For example, for an given $n$ points in a two-dimensional space, the cumulative distribution functions is calculated in the $4n^2$ quadrants of the plane defined by all pairs ($X_i$ ,$Y_j$), $X_i$ and $Y_j$ being coordinates of any pairs of points in the given sample. By ranging over all possible pairs of data points and quadrants, the 2-D D-stat is defined by the maximal difference of the integrated probabilities between samples.
